@@ -2,8 +2,6 @@ AUX freenet 416 RMD160 95efeda98fe723027c74729b03fd293ca29bdc7a SHA1 796d3363417
 DIST freenet-ext.jar 2452429 RMD160 fdac9646f7fbb5ee82ad62580191695cc6bef593 SHA1 712aaf061e5e35df47ab6727476b78a0cf8c47da SHA256 1ab33492054eb6e8550f608d3b7d6f3a5117b5905f342bfad8cb38a2a9350bf2
 DIST freenet-r16458-snapshot.jar 2287761 RMD160 8a08ac61da5db46fd26396d3cb51fcb143afcea7 SHA1 60763790b299d7b31078d400291cbe638fc1c29b SHA256 4f9131699c91a18233368ada86a5e109411f2558d7112ee53dd574a8f6c7c1e1
 DIST freenet07.tar.gz 383366 RMD160 d6f7baee05c1fe2d713fa345fae10bc25287b61e SHA1 8e9ddde6420f5cc24824467747b7a3bcbc21b15c SHA256 aae56bd0d2ed7d80217b1eccab1cf3a946a517df83fc6c1a9de7b95fd82724aa
-DIST update.sh 3115 RMD160 e65f151e06b5a6425dcb59f03b4874ec1e8b5047 SHA1 e024bcfc443982fcc3d888088ef427943fa62f71 SHA256 df80518672316ae8d330e08ef50f170eabacd9003eeac975a400523d0f61922c
-DIST wrapper.conf 1706 RMD160 413f4fec1f60b6d4651f1ffd945e6d9ec2275e39 SHA1 8ec5648d5677325a867118e687f1e05cfe4a417a SHA256 f56a8e897297107c3ea2c95da5f321556e1ac82e87d81f339610f8bb27ecd88b
-EBUILD freenet-bin-0.7.1090.ebuild 2395 RMD160 6b39ef1f7ab131afe481119c075d3025a6494740 SHA1 20af8599d8f58a63be111f9741a464bbdf63d8f1 SHA256 3c02664fd428d116910f0d0d14d0f85d86df1c6062ee8b9ac1e4184dc1b69997
-MISC ChangeLog 3888 RMD160 c6ac5299480c5035891b51cb848becbf81614676 SHA1 977628f6ef8ca7d113c2d6e4750e922929c57e0d SHA256 68d4b65636bf6324b6bf214936a6c18d23112cd61242ce4713d46b046c093f41
+EBUILD freenet-bin-0.7.1090.ebuild 2274 RMD160 3a18fab1d879f99d67b519d3bfd52dbec2d2de41 SHA1 7f0b71dc1479f136bf500fc51fc4098cfa8ea258 SHA256 a986905e0bfd21c7f1bcd5155375f7a8107baee9eab5d357160a2f0d4eec46ee
+MISC ChangeLog 3978 RMD160 033c3ee4d8b3bced57bd2587963ecc4617bc4066 SHA1 ad10013005b70300606ac427ddc1383f18713659 SHA256 89746f9183096ffe39735b70cdcc0bc2c07a1d28f4b3fa624cea865380ea0f33
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
