@@ -1,5 +1,5 @@
 AUX freenet 416 RMD160 95efeda98fe723027c74729b03fd293ca29bdc7a SHA1 796d336341796d081454ebcc45248e90fffaed91 SHA256 d3b665e8d619d995ef9cb67ed4006c96bc4fdf80e6b7923247e022268ab8bae5
 DIST freenet-sources-v1090.tar.bz2 19525769 RMD160 bd3b5d4dfc24d683f55cd858e41f9ebc64fa7d5d SHA1 faf5da26023a6ef0cff97f43d45b692a304c038c SHA256 c429f48f78d686fd6b68f152ff8d5a4052d8d5069459196bde707e656f34129a
-EBUILD freenet-0.7.1090.ebuild 1648 RMD160 7cb8638f70d9a6764742da041141caa2beaa200c SHA1 a64e81241e4aba12122f9fc2df95fd8b6a2daafb SHA256 2d2f8c6e975b3c66ac62d751c3f62d8bff1e4fbd091293ffd10637cf4ffe0102
-MISC ChangeLog 2321 RMD160 5c7df02a6e014dafcd2a5867914236cf413187be SHA1 bf554412586edcc61a472dc06ce85124a4b1d13f SHA256 0753d01209a239b973862fc3b4c6b36f8293414d9f111c5c09ec137695f9021b
+EBUILD freenet-0.7.1090.ebuild 1838 RMD160 cd8e43873842b4ded2086087a22d22e7f8699f06 SHA1 13ab8965e82aaca23e2a43e93d98de22f8760401 SHA256 620cff6ab5096760d29df2cd8f8abf5f81d24ae4212243557b7941a21d6adc6d
+MISC ChangeLog 2407 RMD160 9bf69f41511b3f258057cddc327891068fdbe9b2 SHA1 f6021293aeb2b58a1003c129082f4f311b8f94fb SHA256 a42e5883261f3f0b52bfaa6ea60f8c5fb9536c4879f266907bd60c9623c0c5a6
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
