@@ -1,5 +1,4 @@
-DIST frost-19-Jul-2007-source.zip 1796342 RMD160 cdfe2e0d91d3e780468f3ff0751b995983f43313 SHA1 2c9425fc66e266f64262277147f13966876b6471 SHA256 1a2f3a83b9c0e5479f31e715797417705fc53bb447d0c03f6632e744b5160f4e
-DIST frost-19-Jul-2007.zip 7092779 RMD160 13e09d524a9aa7de10a20ed334e1d0568ed9fe8e SHA1 4a33e7949b12dafdf8bee7f27a69a03b6cd7d829 SHA256 17095700a4b24870a426e6598cfc150407a0e032fa4434d8c83128624f0d71dc
-EBUILD frost-2007.07.19.ebuild 1120 RMD160 6e784ab7572257bbe6d358bba26c679046ff497c SHA1 a7aa9f75325b0f6007490a7aa6744eee307c4de2 SHA256 0783b99f8ece880fc1796459e2efb2679740d302c7a1fb3dd8f3b554a1613d04
-MISC ChangeLog 370 RMD160 d0943b66c2b79ac122a44664d8d97ca3414db497 SHA1 b444e6270f32eb1a709ca33c429eceb3be07d577 SHA256 803173375000095cde09f2988b8fa3edd2ae91d2a65df8e5fcb101f9a2331753
+DIST frost-sources-2007.12.11.tar.bz2 13713000 RMD160 23707e33af7f9d2f842c535f7f36446827987625 SHA1 e42ab106c5bd12bd5b2961e91e59e0ae3c6cd53b SHA256 1b876e0bd8c205a0cc67821cc7ba12e9f8575e9e74303eab8d23cf9a8e732283
+EBUILD frost-2007.12.11.ebuild 1346 RMD160 34b82a288cd5f48c5c7e4211f7212a4c6f9b8ed3 SHA1 4c4c5bda80c4ed1b3c51be14ac4a55e8c28aee73 SHA256 1323cacf84321bcbe9767e99b08dc21b5be06e7d8c5eced88aa775f490b910a1
+MISC ChangeLog 490 RMD160 f1fccbf7656d7c3d99ee8956b0c330c462a867ee SHA1 6a578e387c9414a132cfdfee0dfd951da869e4fe SHA256 d0ad5e70366f525e40ececffcd7d8c0069487352451a0a07e67ec6f28c58676d
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
