@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  15 Dec 2007; (Tommy[D]) tommy100@gmx.de -frost-2007.07.19.ebuild,
+  +frost-2007.12.11.ebuild:
+  New upstream release
+
   28 Oct 2007; Markus Ullmann <jokey@gentoo.org> frost-2007.07.19:
   cleanup
 
