@@ -2,6 +2,9 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  15 Dec 2007; (Tommy[D]) tommy100@gmx.de freenet-bin-0.7.1090.ebuild:
+  Add postrm info
+
   15 Dec 2007; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1089.ebuild,
   +freenet-bin-0.7.1090.ebuild:
   New upstream release
